--- a/VersionOne.ServiceHost.JiraServices.Tests/VersionOne.ServiceHost.JiraServices.Tests.csproj
+++ b/VersionOne.ServiceHost.JiraServices.Tests/VersionOne.ServiceHost.JiraServices.Tests.csproj
@@ -55,6 +55,14 @@
     <Reference Include="VersionOne.ServiceHost.Core">
       <HintPath>..\packages\VersionOne.ServiceHost.Core.2.0.0.0\lib\net451\VersionOne.ServiceHost.Core.dll</HintPath>
     </Reference>
+    <Reference Include="VersionOne.ServiceHost.ServerConnector, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\VersionOne.ServiceHost.ServerConnector.2.0.0.0\lib\net451\VersionOne.ServiceHost.ServerConnector.dll</HintPath>
+    </Reference>
+    <Reference Include="VersionOne.ServiceHost.WorkitemServices, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\VersionOne.ServiceHost.WorkitemServices.2.0.0.0\lib\net451\VersionOne.ServiceHost.WorkitemServices.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -89,10 +97,6 @@
     <ProjectReference Include="..\VersionOne.ServiceHost.JiraServices\VersionOne.ServiceHost.JiraServices.csproj">
       <Project>{7cfce842-cc70-4902-ab69-2a87efe354be}</Project>
       <Name>VersionOne.ServiceHost.JiraServices</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VersionOne.ServiceHost.WorkitemServices\VersionOne.ServiceHost.WorkitemServices.csproj">
-      <Project>{76b6d3f1-16f8-43a9-a2b7-ddadafe70d0d}</Project>
-      <Name>VersionOne.ServiceHost.WorkitemServices</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
