--- a/VersionOne.ServiceHost.JiraServices.Tests/packages.config
+++ b/VersionOne.ServiceHost.JiraServices.Tests/packages.config
@@ -6,4 +6,6 @@
   <package id="RhinoMocks" version="3.6.1" targetFramework="net451" />
   <package id="VersionOne.SDK.APIClient" version="15.0.0.0" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="2.0.0.0" targetFramework="net451" />
+  <package id="VersionOne.ServiceHost.ServerConnector" version="2.0.0.0" targetFramework="net451" />
+  <package id="VersionOne.ServiceHost.WorkitemServices" version="2.0.0.0" targetFramework="net451" />
 </packages>
