--- a/VersionOne.ServiceHost.JiraServices/packages.config
+++ b/VersionOne.ServiceHost.JiraServices/packages.config
@@ -6,4 +6,5 @@
   <package id="VersionOne.SDK.APIClient" version="15.0.0.0" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.Core" version="2.0.0.0" targetFramework="net451" />
   <package id="VersionOne.ServiceHost.ServerConnector" version="2.0.0.0" targetFramework="net451" />
+  <package id="VersionOne.ServiceHost.WorkitemServices" version="2.0.0.0" targetFramework="net451" />
 </packages>
