Copy all VersionOne.ServiceHost.* dlls to ServiceHost project output folder

--- a/VersionOne.ServiceHost.JiraServices/VersionOne.ServiceHost.JiraServices.csproj
+++ b/VersionOne.ServiceHost.JiraServices/VersionOne.ServiceHost.JiraServices.csproj
@@ -160,6 +160,6 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetDir)$(TargetName).* $(SolutionDir)$(SolutionName)\$(OutDir)
-copy $(TargetDir)$(SolutionName).ServerConnector.dll $(SolutionDir)$(SolutionName)\$(OutDir)</PostBuildEvent>
+copy $(TargetDir)$(SolutionName).*.dll $(SolutionDir)$(SolutionName)\$(OutDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
