--- a/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
+++ b/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
@@ -141,7 +141,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)$(TargetName).* $(SolutionDir)$(SolutionName)\$(OutDir)
-copy "$(SolutionDir)Dependencies\*" "$(SolutionDir)$(SolutionName)\$(OutDir)"</PostBuildEvent>
+    <PostBuildEvent>copy $(TargetDir)$(TargetName).* $(SolutionDir)$(SolutionName)\$(OutDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
