D-12600 Extract class for testing purposes and rename field.
Renaming TotalAvailable to TotalAvailableOnJiraServer to better
reflect what it represents.

--- a/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
+++ b/VersionOne.JiraConnector/VersionOne.JiraConnector.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="JiraConnectorFactory.cs" />
     <Compile Include="JiraConnectorType.cs" />
+    <Compile Include="Rest\JiraIssues.cs" />
     <Compile Include="Rest\JiraRestProxy.cs" />
     <Compile Include="Soap\JiraSoapProxy.cs" />
     <Compile Include="Soap\JiraSoapService.cs" />
