--- a/VersionOne.ServiceHost.JiraServices.Tests/VersionOne.ServiceHost.JiraServices.Tests.csproj
+++ b/VersionOne.ServiceHost.JiraServices.Tests/VersionOne.ServiceHost.JiraServices.Tests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\Rhino.Mocks.dll</HintPath>
@@ -59,6 +63,7 @@
     <Compile Include="JiraCustomFieldValidatorTests.cs" />
     <Compile Include="JiraFilterValidatorTests.cs" />
     <Compile Include="JiraHostedServiceTests.cs" />
+    <Compile Include="JiraIssuesTests.cs" />
     <Compile Include="JiraPriorityValidatorTests.cs" />
     <Compile Include="JiraProjectValidatorTests.cs" />
     <Compile Include="JiraProxyTests.cs" />
@@ -83,6 +88,9 @@
       <Project>{76b6d3f1-16f8-43a9-a2b7-ddadafe70d0d}</Project>
       <Name>VersionOne.ServiceHost.WorkitemServices</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
