--- a/VersionOne.JiraConnector.Tests/VersionOne.JiraConnector.Tests.csproj
+++ b/VersionOne.JiraConnector.Tests/VersionOne.JiraConnector.Tests.csproj
@@ -54,7 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="JiraIssuesTests.cs" />
+    <Compile Include="Rest\JiraIssuesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +66,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
